[gd_scene load_steps=23 format=3 uid="uid://cfxybseexbl31"]

[ext_resource type="Script" uid="uid://cybxik6ie6di2" path="res://Scripts/mainscript.gd" id="1_5vw27"]
[ext_resource type="Texture2D" uid="uid://bes41m3nm8u4a" path="res://Screenshot_1.png" id="1_272bh"]
[ext_resource type="Texture2D" uid="uid://f6kv62cqlpri" path="res://icon_100.png" id="2_5vw27"]
[ext_resource type="Texture2D" uid="uid://banjf0uu0qxlr" path="res://Screenshot_3.png" id="4_4c57u"]
[ext_resource type="Script" uid="uid://dtw56ea6ym5gs" path="res://Scripts/ram.gd" id="5_efxa6"]
[ext_resource type="Script" uid="uid://m3ce1m7uqnow" path="res://Scripts/regs.gd" id="6_dg77c"]
[ext_resource type="Texture2D" uid="uid://bo852ml0mw1n6" path="res://Screenshot_2.png" id="8_kek77"]
[ext_resource type="Script" uid="uid://bupp7q04bjqw1" path="res://Scripts/ui_abertura.gd" id="9_kek77"]

[sub_resource type="Theme" id="Theme_8we33"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_t811e"]
bg_color = Color(0.180392, 0.184314, 0.247059, 1)

[sub_resource type="SystemFont" id="SystemFont_nwsox"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_4c57u"]
bg_color = Color(0.787542, 2.69532e-06, 2.88785e-07, 1)
corner_radius_top_left = 3
corner_radius_top_right = 3
corner_radius_bottom_right = 3
corner_radius_bottom_left = 3

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_5vw27"]
bg_color = Color(0.421331, 0.025928, 0.025916, 1)
corner_radius_top_left = 3
corner_radius_top_right = 3
corner_radius_bottom_right = 3
corner_radius_bottom_left = 3

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_7y5iv"]
bg_color = Color(0.180392, 0.184314, 0.247059, 1)

[sub_resource type="SystemFont" id="SystemFont_io28c"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_1xtop"]
bg_color = Color(0.0768, 0.07968, 0.12, 1)
corner_radius_top_left = 5
corner_radius_top_right = 5
corner_radius_bottom_right = 5
corner_radius_bottom_left = 5

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_dikqp"]
bg_color = Color(0.1664, 0.17264, 0.26, 1)
corner_radius_top_left = 3
corner_radius_top_right = 3
corner_radius_bottom_right = 3
corner_radius_bottom_left = 3

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_h0kdk"]
bg_color = Color(0.0784314, 0.0784314, 0.121569, 1)
corner_radius_top_left = 5
corner_radius_top_right = 5
corner_radius_bottom_right = 5
corner_radius_bottom_left = 5

[sub_resource type="Animation" id="Animation_5exys"]
resource_name = "Black_in"
length = 3.0
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("ColorRect:color")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 2),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Color(0, 0, 0, 1), Color(0, 0, 0, 0)]
}

[sub_resource type="Animation" id="Animation_d0hcp"]
resource_name = "Black_out"
length = 3.0
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("ColorRect:color")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(1, 3),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Color(0, 0, 0, 0), Color(0, 0, 0, 1)]
}

[sub_resource type="Animation" id="Animation_cdxs8"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("ColorRect:color")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(0, 0, 0, 0)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_24qyn"]
_data = {
&"Black_in": SubResource("Animation_5exys"),
&"Black_out": SubResource("Animation_d0hcp"),
&"RESET": SubResource("Animation_cdxs8")
}

[node name="UI" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_5vw27")

[node name="UI-Tela" type="Control" parent="."]
layout_mode = 3
anchors_preset = 0
offset_right = 1152.0
offset_bottom = 648.0

[node name="ColorRect" type="ColorRect" parent="UI-Tela"]
layout_mode = 0
offset_top = 2.0
offset_right = 1152.0
offset_bottom = 648.0
color = Color(0.117647, 0.121569, 0.184314, 1)

[node name="Screenshot1" type="Sprite2D" parent="UI-Tela"]
position = Vector2(1802, 324)
scale = Vector2(0.843956, 0.84485)
texture = ExtResource("1_272bh")

[node name="Start" type="Button" parent="UI-Tela"]
layout_mode = 0
offset_left = 954.0
offset_top = 301.0
offset_right = 1005.0
offset_bottom = 335.0
theme_override_font_sizes/font_size = 11
text = "Start"
metadata/_edit_use_anchors_ = true

[node name="Stop" type="Button" parent="UI-Tela"]
layout_mode = 0
offset_left = 1014.0
offset_top = 301.0
offset_right = 1065.0
offset_bottom = 335.0
theme_override_font_sizes/font_size = 11
text = "Stop"
metadata/_edit_use_anchors_ = true

[node name="Step" type="Button" parent="UI-Tela"]
layout_mode = 0
offset_left = 1073.0
offset_top = 301.0
offset_right = 1124.0
offset_bottom = 335.0
theme_override_font_sizes/font_size = 11
text = "Step"
metadata/_edit_use_anchors_ = true

[node name="ControlW" type="Panel" parent="UI-Tela"]
layout_mode = 1
anchors_preset = -1
anchor_left = -0.00251389
anchor_top = -0.0123457
anchor_right = -0.00251389
anchor_bottom = -0.0123457
offset_left = 1016.9
offset_top = 352.0
offset_right = 1066.9
offset_bottom = 386.0
theme = SubResource("Theme_8we33")
metadata/_edit_use_anchors_ = true

[node name="Label" type="Label" parent="UI-Tela/ControlW"]
layout_mode = 0
offset_left = 20.0
offset_top = 8.0
offset_right = 60.0
offset_bottom = 31.0
theme_override_font_sizes/font_size = 12
text = "W"
metadata/_edit_use_anchors_ = true

[node name="ControlA" type="Panel" parent="UI-Tela"]
layout_mode = 1
anchors_preset = -1
anchor_left = -0.00251389
anchor_top = -0.0123457
anchor_right = -0.00251389
anchor_bottom = -0.0123457
offset_left = 961.896
offset_top = 390.0
offset_right = 1011.9
offset_bottom = 424.0
theme = SubResource("Theme_8we33")
metadata/_edit_use_anchors_ = true

[node name="Label" type="Label" parent="UI-Tela/ControlA"]
layout_mode = 0
offset_left = 21.0
offset_top = 9.0
offset_right = 61.0
offset_bottom = 32.0
theme_override_font_sizes/font_size = 12
text = "A"
metadata/_edit_use_anchors_ = true

[node name="ControlS" type="Panel" parent="UI-Tela"]
layout_mode = 1
anchors_preset = -1
anchor_left = -0.00251389
anchor_top = -0.0123457
anchor_right = -0.00251389
anchor_bottom = -0.0123457
offset_left = 1016.9
offset_top = 390.0
offset_right = 1066.9
offset_bottom = 424.0
theme = SubResource("Theme_8we33")
metadata/_edit_use_anchors_ = true

[node name="Label" type="Label" parent="UI-Tela/ControlS"]
layout_mode = 0
offset_left = 21.0
offset_top = 9.0
offset_right = 61.0
offset_bottom = 32.0
theme_override_font_sizes/font_size = 12
text = "S"
metadata/_edit_use_anchors_ = true

[node name="ControlD" type="Panel" parent="UI-Tela"]
layout_mode = 1
anchors_preset = -1
anchor_left = -0.000777774
anchor_top = -0.0123457
anchor_right = -0.000777774
anchor_bottom = -0.0123457
offset_left = 1069.0
offset_top = 390.0
offset_right = 1119.0
offset_bottom = 424.0
theme = SubResource("Theme_8we33")
metadata/_edit_use_anchors_ = true

[node name="Label" type="Label" parent="UI-Tela/ControlD"]
layout_mode = 0
offset_left = 21.0
offset_top = 9.0
offset_right = 61.0
offset_bottom = 32.0
theme_override_font_sizes/font_size = 12
text = "D"
metadata/_edit_use_anchors_ = true

[node name="InstrucoesPorSegs" type="Label" parent="UI-Tela"]
layout_mode = 0
offset_left = 943.0
offset_top = 226.0
offset_right = 1086.0
offset_bottom = 249.0
theme_override_font_sizes/font_size = 14
text = "Instruções por Segundo"
metadata/_edit_use_anchors_ = true

[node name="InstrucoesdoPC" type="Label" parent="UI-Tela"]
layout_mode = 0
offset_left = 944.0
offset_top = 169.0
offset_right = 1087.0
offset_bottom = 192.0
theme_override_font_sizes/font_size = 15
text = "Instrução do PC: 0"
metadata/_edit_use_anchors_ = true

[node name="Rate" type="Label" parent="UI-Tela"]
layout_mode = 0
offset_left = 943.0
offset_top = 257.0
offset_right = 1086.0
offset_bottom = 280.0
theme_override_font_sizes/font_size = 14
text = "Rate: 1"
metadata/_edit_use_anchors_ = true

[node name="RateSlider" type="HSlider" parent="UI-Tela"]
layout_mode = 0
offset_left = 943.0
offset_top = 243.0
offset_right = 1132.0
offset_bottom = 259.0
min_value = 1.0
max_value = 10000.0
value = 400.0
metadata/_edit_use_anchors_ = true

[node name="GridContainer" type="GridContainer" parent="UI-Tela"]
layout_mode = 0
offset_left = 9.0
offset_top = 51.0
offset_right = 917.0
offset_bottom = 632.0
theme_override_constants/h_separation = 96
theme_override_constants/v_separation = 48
columns = 40
metadata/_edit_use_anchors_ = true

[node name="cabeca" type="MarginContainer" parent="UI-Tela"]
layout_mode = 1
anchors_preset = 10
anchor_right = 1.0
offset_bottom = 42.0
grow_horizontal = 2

[node name="Panel" type="Panel" parent="UI-Tela/cabeca"]
layout_mode = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_t811e")

[node name="HBoxContainer" type="HBoxContainer" parent="UI-Tela/cabeca/Panel"]
clip_contents = true
layout_mode = 2
offset_right = 1152.0
offset_bottom = 42.0
size_flags_vertical = 5
size_flags_stretch_ratio = 13.73

[node name="HBoxContainer2" type="HBoxContainer" parent="UI-Tela/cabeca/Panel/HBoxContainer"]
clip_contents = true
layout_mode = 2
size_flags_vertical = 4
size_flags_stretch_ratio = 13.73

[node name="Espaco" type="Label" parent="UI-Tela/cabeca/Panel/HBoxContainer/HBoxContainer2"]
layout_mode = 2
size_flags_horizontal = 10
size_flags_vertical = 1
theme_override_fonts/font = SubResource("SystemFont_nwsox")
theme_override_font_sizes/font_size = 23
text = "        "
metadata/_edit_use_anchors_ = true

[node name="Titulo" type="Label" parent="UI-Tela/cabeca/Panel/HBoxContainer/HBoxContainer2"]
layout_mode = 2
size_flags_horizontal = 10
size_flags_vertical = 1
theme_override_colors/font_color = Color(0.807843, 0.709804, 0.670588, 1)
theme_override_fonts/font = SubResource("SystemFont_nwsox")
theme_override_font_sizes/font_size = 23
text = "100K-1"
metadata/_edit_use_anchors_ = true

[node name="Icon100" type="Sprite2D" parent="UI-Tela/cabeca/Panel/HBoxContainer/HBoxContainer2"]
position = Vector2(29.5, 20.5)
scale = Vector2(0.0275331, 0.0275331)
texture = ExtResource("2_5vw27")

[node name="HBoxContainer" type="HBoxContainer" parent="UI-Tela/cabeca/Panel/HBoxContainer"]
clip_contents = true
layout_mode = 2
size_flags_horizontal = 6
size_flags_vertical = 4
size_flags_stretch_ratio = 13.73

[node name="PanelChar" type="Panel" parent="UI-Tela/cabeca/Panel/HBoxContainer/HBoxContainer"]
custom_minimum_size = Vector2(200, 0)
layout_mode = 2

[node name="CharacterDisplay" type="Label" parent="UI-Tela/cabeca/Panel/HBoxContainer/HBoxContainer/PanelChar"]
layout_mode = 2
anchor_left = -0.02
anchor_right = 0.2
offset_left = 4.0
offset_right = 160.0
offset_bottom = 32.0
size_flags_horizontal = 6
theme_override_fonts/font = SubResource("SystemFont_nwsox")
theme_override_font_sizes/font_size = 23
text = "---------------------"
horizontal_alignment = 1
metadata/_edit_use_anchors_ = true

[node name="PanelNumb" type="Panel" parent="UI-Tela/cabeca/Panel/HBoxContainer/HBoxContainer"]
custom_minimum_size = Vector2(70, 30)
layout_mode = 2

[node name="NumberDisplay" type="Label" parent="UI-Tela/cabeca/Panel/HBoxContainer/HBoxContainer/PanelNumb"]
layout_mode = 2
anchor_left = 0.628571
anchor_top = -0.0666667
anchor_right = 1.07143
anchor_bottom = -0.0666667
offset_left = -43.0
offset_right = -5.0
offset_bottom = 32.0
theme_override_fonts/font = SubResource("SystemFont_nwsox")
theme_override_font_sizes/font_size = 23
text = "0000"
horizontal_alignment = 1
metadata/_edit_use_anchors_ = true

[node name="HBoxContainer3" type="HBoxContainer" parent="UI-Tela/cabeca/Panel/HBoxContainer"]
clip_contents = true
layout_mode = 2
size_flags_horizontal = 6
size_flags_vertical = 4
size_flags_stretch_ratio = 13.73
theme_override_constants/separation = 4

[node name="espaço" type="Label" parent="UI-Tela/cabeca/Panel/HBoxContainer/HBoxContainer3"]
layout_mode = 2
theme_override_fonts/font = SubResource("SystemFont_nwsox")
theme_override_font_sizes/font_size = 23
text = "                                            "
metadata/_edit_use_anchors_ = true

[node name="FullscreenSetting" type="CheckBox" parent="UI-Tela/cabeca/Panel/HBoxContainer/HBoxContainer3"]
layout_mode = 2
theme_override_colors/font_color = Color(0.807843, 0.709804, 0.670588, 1)
theme_override_font_sizes/font_size = 8
text = "Fullscreen"

[node name="tela-arquivos" type="Button" parent="UI-Tela/cabeca/Panel/HBoxContainer/HBoxContainer3"]
custom_minimum_size = Vector2(60, 0)
layout_mode = 2
theme_override_colors/font_color = Color(0.807843, 0.709804, 0.670588, 1)
theme_override_font_sizes/font_size = 11
text = "Arquivos"
metadata/_edit_use_anchors_ = true

[node name="tela-informacoes" type="Button" parent="UI-Tela/cabeca/Panel/HBoxContainer/HBoxContainer3"]
layout_mode = 2
size_flags_horizontal = 4
theme_override_colors/font_color = Color(0.807843, 0.709804, 0.670588, 1)
theme_override_font_sizes/font_size = 11
action_mode = 0
text = "Informações"
metadata/_edit_use_anchors_ = true

[node name="X" type="Button" parent="UI-Tela/cabeca/Panel/HBoxContainer/HBoxContainer3"]
custom_minimum_size = Vector2(28, 0)
layout_mode = 2
mouse_default_cursor_shape = 2
theme_override_font_sizes/font_size = 16
theme_override_styles/hover = SubResource("StyleBoxFlat_4c57u")
theme_override_styles/pressed = SubResource("StyleBoxFlat_5vw27")
text = "x"
metadata/_edit_use_anchors_ = true

[node name="Label" type="Label" parent="UI-Tela/cabeca/Panel/HBoxContainer/HBoxContainer3"]
layout_mode = 2

[node name="CameraTela" type="Camera2D" parent="UI-Tela"]
position = Vector2(576, 324)

[node name="UI-Informacoes" type="Control" parent="."]
anchors_preset = 0
offset_top = 700.0
offset_right = 1152.0
offset_bottom = 1348.0

[node name="ColorRect" type="ColorRect" parent="UI-Informacoes"]
layout_mode = 0
offset_top = 2.0
offset_right = 1152.0
offset_bottom = 648.0
color = Color(0.117647, 0.121569, 0.184314, 1)

[node name="Screenshot3" type="Sprite2D" parent="UI-Informacoes"]
position = Vector2(1800, 319)
scale = Vector2(0.843956, 0.84485)
texture = ExtResource("4_4c57u")

[node name="cabeca" type="MarginContainer" parent="UI-Informacoes"]
layout_mode = 1
anchors_preset = 10
anchor_right = 1.0
offset_bottom = 42.0
grow_horizontal = 2

[node name="Panel" type="Panel" parent="UI-Informacoes/cabeca"]
layout_mode = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_7y5iv")

[node name="HBoxContainer" type="HBoxContainer" parent="UI-Informacoes/cabeca/Panel"]
clip_contents = true
layout_mode = 1
anchors_preset = 14
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
offset_top = -16.0
offset_bottom = 16.0
grow_horizontal = 2
grow_vertical = 2
size_flags_vertical = 5
size_flags_stretch_ratio = 13.73

[node name="HBoxContainer2" type="HBoxContainer" parent="UI-Informacoes/cabeca/Panel/HBoxContainer"]
clip_contents = true
layout_mode = 2
size_flags_horizontal = 0
size_flags_vertical = 4
size_flags_stretch_ratio = 13.73

[node name="Label" type="Label" parent="UI-Informacoes/cabeca/Panel/HBoxContainer/HBoxContainer2"]
layout_mode = 2
size_flags_horizontal = 10
size_flags_vertical = 1
theme_override_fonts/font = SubResource("SystemFont_io28c")
theme_override_font_sizes/font_size = 23
text = "        "
metadata/_edit_use_anchors_ = true

[node name="Label2" type="Label" parent="UI-Informacoes/cabeca/Panel/HBoxContainer/HBoxContainer2"]
layout_mode = 2
size_flags_horizontal = 10
size_flags_vertical = 1
theme_override_colors/font_color = Color(0.807843, 0.709804, 0.670588, 1)
theme_override_fonts/font = SubResource("SystemFont_io28c")
theme_override_font_sizes/font_size = 23
text = "100K-1"
metadata/_edit_use_anchors_ = true

[node name="Label3" type="Label" parent="UI-Informacoes/cabeca/Panel/HBoxContainer/HBoxContainer2"]
layout_mode = 2
size_flags_horizontal = 10
size_flags_vertical = 1
theme_override_colors/font_color = Color(0.807843, 0.709804, 0.670588, 1)
theme_override_fonts/font = SubResource("SystemFont_io28c")
theme_override_font_sizes/font_size = 21
text = "Hardware"
metadata/_edit_use_anchors_ = true

[node name="Icon100" type="Sprite2D" parent="UI-Informacoes/cabeca/Panel/HBoxContainer/HBoxContainer2"]
position = Vector2(29.5, 20.5)
scale = Vector2(0.0275331, 0.0275331)
texture = ExtResource("2_5vw27")

[node name="HBoxContainer3" type="HBoxContainer" parent="UI-Informacoes/cabeca/Panel/HBoxContainer"]
clip_contents = true
layout_mode = 2
size_flags_horizontal = 10
size_flags_vertical = 4
size_flags_stretch_ratio = 15.95
theme_override_constants/separation = 4

[node name="FullscreenSetting" type="CheckBox" parent="UI-Informacoes/cabeca/Panel/HBoxContainer/HBoxContainer3"]
layout_mode = 2
theme_override_colors/font_color = Color(0.807843, 0.709804, 0.670588, 1)
theme_override_font_sizes/font_size = 8
text = "Fullscreen"

[node name="informacoes-arquivos" type="Button" parent="UI-Informacoes/cabeca/Panel/HBoxContainer/HBoxContainer3"]
custom_minimum_size = Vector2(60, 0)
layout_mode = 2
theme_override_colors/font_color = Color(0.807843, 0.709804, 0.670588, 1)
theme_override_font_sizes/font_size = 11
text = "Arquivos"
metadata/_edit_use_anchors_ = true

[node name="informacao-tela" type="Button" parent="UI-Informacoes/cabeca/Panel/HBoxContainer/HBoxContainer3"]
custom_minimum_size = Vector2(55, 0)
layout_mode = 2
size_flags_horizontal = 4
theme_override_colors/font_color = Color(0.807843, 0.709804, 0.670588, 1)
theme_override_font_sizes/font_size = 11
action_mode = 0
text = "Tela"
metadata/_edit_use_anchors_ = true

[node name="X" type="Button" parent="UI-Informacoes/cabeca/Panel/HBoxContainer/HBoxContainer3"]
custom_minimum_size = Vector2(28, 0)
layout_mode = 2
mouse_default_cursor_shape = 2
theme_override_font_sizes/font_size = 16
theme_override_styles/hover = SubResource("StyleBoxFlat_4c57u")
theme_override_styles/pressed = SubResource("StyleBoxFlat_5vw27")
text = "x"
metadata/_edit_use_anchors_ = true

[node name="Label" type="Label" parent="UI-Informacoes/cabeca/Panel/HBoxContainer/HBoxContainer3"]
layout_mode = 2

[node name="Flags" type="Panel" parent="UI-Informacoes"]
layout_mode = 0
offset_left = 8.0
offset_top = 51.0
offset_right = 1145.0
offset_bottom = 152.0
theme_override_styles/panel = SubResource("StyleBoxFlat_1xtop")

[node name="LabelFlags" type="Label" parent="UI-Informacoes/Flags"]
layout_mode = 0
offset_left = 19.0
offset_top = 9.0
offset_right = 59.0
offset_bottom = 32.0
scale = Vector2(1.2, 1.2)
theme_override_colors/font_color = Color(0.807843, 0.709804, 0.670588, 1)
text = "Flags"

[node name="PanelZero" type="Panel" parent="UI-Informacoes/Flags"]
layout_mode = 0
offset_left = 18.0
offset_top = 40.0
offset_right = 557.0
offset_bottom = 80.0
theme_override_styles/panel = SubResource("StyleBoxFlat_dikqp")

[node name="Zero" type="Label" parent="UI-Informacoes/Flags/PanelZero"]
layout_mode = 0
offset_left = 8.0
offset_top = 8.0
offset_right = 48.0
offset_bottom = 31.0
text = "  Zero : True"

[node name="PanelCarry" type="Panel" parent="UI-Informacoes/Flags"]
layout_mode = 0
offset_left = 581.0
offset_top = 40.0
offset_right = 1120.0
offset_bottom = 80.0
theme_override_styles/panel = SubResource("StyleBoxFlat_dikqp")

[node name="Carry" type="Label" parent="UI-Informacoes/Flags/PanelCarry"]
layout_mode = 0
offset_left = 11.0
offset_top = 8.0
offset_right = 51.0
offset_bottom = 31.0
text = " Carry : False"

[node name="Ram" type="Panel" parent="UI-Informacoes"]
layout_mode = 0
offset_left = 9.0
offset_top = 169.0
offset_right = 572.0
offset_bottom = 640.0
theme_override_styles/panel = SubResource("StyleBoxFlat_h0kdk")
script = ExtResource("5_efxa6")

[node name="Ram-text" type="Label" parent="UI-Informacoes/Ram"]
layout_mode = 0
offset_left = 19.0
offset_top = 11.0
offset_right = 59.0
offset_bottom = 34.0
theme_override_colors/font_color = Color(0.807843, 0.709804, 0.670588, 1)
theme_override_font_sizes/font_size = 20
text = "RAM"

[node name="VScrollContainerRam" type="ScrollContainer" parent="UI-Informacoes/Ram"]
layout_mode = 2
offset_left = 10.0
offset_top = 44.0
offset_right = 555.0
offset_bottom = 454.0

[node name="HFlowContainerRam" type="HFlowContainer" parent="UI-Informacoes/Ram/VScrollContainerRam"]
clip_contents = true
custom_minimum_size = Vector2(150, 50)
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
theme_override_constants/h_separation = 10
theme_override_constants/v_separation = 8

[node name="Regs" type="Panel" parent="UI-Informacoes"]
layout_mode = 0
offset_left = 581.0
offset_top = 169.0
offset_right = 1144.0
offset_bottom = 640.0
theme_override_styles/panel = SubResource("StyleBoxFlat_h0kdk")
script = ExtResource("6_dg77c")

[node name="regs-text" type="Label" parent="UI-Informacoes/Regs"]
layout_mode = 0
offset_left = 29.0
offset_top = 11.0
offset_right = 163.0
offset_bottom = 39.0
theme_override_colors/font_color = Color(0.807843, 0.709804, 0.670588, 1)
theme_override_font_sizes/font_size = 20
text = "Registradores"

[node name="VScrollBar" type="ScrollContainer" parent="UI-Informacoes/Regs"]
layout_mode = 0
offset_left = 10.0
offset_top = 44.0
offset_right = 555.0
offset_bottom = 454.0

[node name="HFlowContainer" type="HFlowContainer" parent="UI-Informacoes/Regs/VScrollBar"]
clip_contents = true
custom_minimum_size = Vector2(150, 50)
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
theme_override_constants/h_separation = 10
theme_override_constants/v_separation = 8

[node name="CameraInfo" type="Camera2D" parent="UI-Informacoes"]
position = Vector2(576, 324)

[node name="UI-Arquivos" type="Control" parent="."]
anchors_preset = 0
offset_top = 1412.0
offset_right = 1152.0
offset_bottom = 2060.0

[node name="Screenshot2" type="Sprite2D" parent="UI-Arquivos"]
position = Vector2(576, 324.5)
scale = Vector2(0.844, 0.845)
texture = ExtResource("8_kek77")

[node name="CameraArquivos" type="Camera2D" parent="UI-Arquivos"]
position = Vector2(576, 324)

[node name="cabeca" type="MarginContainer" parent="UI-Arquivos"]
layout_mode = 1
anchors_preset = 10
anchor_right = 1.0
offset_bottom = 42.0
grow_horizontal = 2

[node name="Panel" type="Panel" parent="UI-Arquivos/cabeca"]
layout_mode = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_7y5iv")

[node name="HBoxContainer" type="HBoxContainer" parent="UI-Arquivos/cabeca/Panel"]
clip_contents = true
layout_mode = 1
anchors_preset = 14
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
offset_top = -16.0
offset_bottom = 16.0
grow_horizontal = 2
grow_vertical = 2
size_flags_vertical = 5
size_flags_stretch_ratio = 13.73

[node name="HBoxContainer2" type="HBoxContainer" parent="UI-Arquivos/cabeca/Panel/HBoxContainer"]
clip_contents = true
layout_mode = 2
size_flags_horizontal = 0
size_flags_vertical = 4
size_flags_stretch_ratio = 13.73

[node name="Espaço" type="Label" parent="UI-Arquivos/cabeca/Panel/HBoxContainer/HBoxContainer2"]
layout_mode = 2
size_flags_horizontal = 10
size_flags_vertical = 1
theme_override_fonts/font = SubResource("SystemFont_io28c")
theme_override_font_sizes/font_size = 23
text = "        "
metadata/_edit_use_anchors_ = true

[node name="Título" type="Label" parent="UI-Arquivos/cabeca/Panel/HBoxContainer/HBoxContainer2"]
layout_mode = 2
size_flags_horizontal = 10
size_flags_vertical = 1
theme_override_colors/font_color = Color(0.807843, 0.709804, 0.670588, 1)
theme_override_fonts/font = SubResource("SystemFont_io28c")
theme_override_font_sizes/font_size = 23
text = "100K-1"
metadata/_edit_use_anchors_ = true

[node name="EditorAssembly" type="Label" parent="UI-Arquivos/cabeca/Panel/HBoxContainer/HBoxContainer2"]
layout_mode = 2
size_flags_horizontal = 10
size_flags_vertical = 1
theme_override_colors/font_color = Color(0.807843, 0.709804, 0.670588, 1)
theme_override_fonts/font = SubResource("SystemFont_io28c")
theme_override_font_sizes/font_size = 21
text = "Editor Assembly"
metadata/_edit_use_anchors_ = true

[node name="Icon100" type="Sprite2D" parent="UI-Arquivos/cabeca/Panel/HBoxContainer/HBoxContainer2"]
position = Vector2(29.5, 20.5)
scale = Vector2(0.0275331, 0.0275331)
texture = ExtResource("2_5vw27")

[node name="HBoxContainer3" type="HBoxContainer" parent="UI-Arquivos/cabeca/Panel/HBoxContainer"]
clip_contents = true
layout_mode = 2
size_flags_horizontal = 10
size_flags_vertical = 4
size_flags_stretch_ratio = 15.95
theme_override_constants/separation = 4

[node name="FullscreenSetting" type="CheckBox" parent="UI-Arquivos/cabeca/Panel/HBoxContainer/HBoxContainer3"]
layout_mode = 2
theme_override_colors/font_color = Color(0.807843, 0.709804, 0.670588, 1)
theme_override_font_sizes/font_size = 8
text = "Fullscreen"

[node name="arquivo-tela" type="Button" parent="UI-Arquivos/cabeca/Panel/HBoxContainer/HBoxContainer3"]
custom_minimum_size = Vector2(60, 0)
layout_mode = 2
theme_override_colors/font_color = Color(0.807843, 0.709804, 0.670588, 1)
theme_override_font_sizes/font_size = 11
text = "Tela"
metadata/_edit_use_anchors_ = true

[node name="arquivos-informacao" type="Button" parent="UI-Arquivos/cabeca/Panel/HBoxContainer/HBoxContainer3"]
custom_minimum_size = Vector2(55, 0)
layout_mode = 2
size_flags_horizontal = 4
theme_override_colors/font_color = Color(0.807843, 0.709804, 0.670588, 1)
theme_override_font_sizes/font_size = 11
action_mode = 0
text = "Informações"
metadata/_edit_use_anchors_ = true

[node name="X" type="Button" parent="UI-Arquivos/cabeca/Panel/HBoxContainer/HBoxContainer3"]
custom_minimum_size = Vector2(28, 0)
layout_mode = 2
mouse_default_cursor_shape = 2
theme_override_font_sizes/font_size = 16
theme_override_styles/hover = SubResource("StyleBoxFlat_4c57u")
theme_override_styles/pressed = SubResource("StyleBoxFlat_5vw27")
text = "x"
metadata/_edit_use_anchors_ = true

[node name="Label" type="Label" parent="UI-Arquivos/cabeca/Panel/HBoxContainer/HBoxContainer3"]
layout_mode = 2

[node name="UI-Abertura" type="Control" parent="."]
anchors_preset = 0
offset_top = -700.0
offset_right = 1152.0
offset_bottom = -52.0
script = ExtResource("9_kek77")

[node name="background" type="ColorRect" parent="UI-Abertura"]
layout_mode = 0
offset_left = -50.0
offset_top = -29.0
offset_right = -12.0
offset_bottom = 6.0
scale = Vector2(32.6887, 20.0676)
color = Color(0, 0, 0, 1)

[node name="Sprite2D" type="Sprite2D" parent="UI-Abertura"]
position = Vector2(579, 276)
scale = Vector2(0.451394, 0.521362)
texture = ExtResource("2_5vw27")

[node name="Label" type="Label" parent="UI-Abertura"]
layout_mode = 0
offset_left = 487.0
offset_top = 517.0
offset_right = 730.0
offset_bottom = 573.0
text = "By oJVSG_ and oDPLS_"

[node name="ColorRect" type="ColorRect" parent="UI-Abertura"]
layout_mode = 0
offset_left = -50.0
offset_top = -29.0
offset_right = -12.0
offset_bottom = 6.0
scale = Vector2(32.6887, 20.0676)
color = Color(0, 0, 0, 0)

[node name="AnimationPlayer" type="AnimationPlayer" parent="UI-Abertura"]
libraries = {
&"": SubResource("AnimationLibrary_24qyn")
}

[node name="CameraAbertura" type="Camera2D" parent="UI-Abertura"]
position = Vector2(576, 324)

[connection signal="toggled" from="UI-Tela/cabeca/Panel/HBoxContainer/HBoxContainer3/FullscreenSetting" to="UI-Tela/cabeca/Panel/HBoxContainer/HBoxContainer3/FullscreenSetting" method="_on_toggled"]
[connection signal="pressed" from="UI-Tela/cabeca/Panel/HBoxContainer/HBoxContainer3/tela-informacoes" to="UI-Tela/cabeca/Panel/HBoxContainer/HBoxContainer3/tela-informacoes" method="_on_pressed"]
